# flexibee2fakturoid

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: spec.md
src/f2f/: cli.py
src/f2f/fakturoid/: client.py  models.py
src/f2f/flexibee/: backup.py  models.py
src/f2f/migration/: mapper.py  run_log.py  runner.py
tests/: conftest.py  test_backup.py  test_e2e_invoices.py  test_e2e_migrate.py  test_e2e_oauth.py  test_e2e_rollback.py  test_mapper.py  test_mock_fakturoid.py  test_models.py
tests/fixtures/: fake_dump.py
tests/mock_fakturoid/: app.py  server.py
