[tool.poetry]
name = "flexibee2fakturoid"
version = "0.1.0"
description = "Jednorázový migrační CLI nástroj pro přesun dat z FlexiBee do Fakturoidu (backup-first přístup)"
authors = ["Michal Maněna"]
license = "MIT"
readme = "README.md"
packages = [{ include = "f2f", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27"
pydantic = "^2.7"
typer = "^0.12"
rich = "^13.7"
pgdumplib = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.5"

[tool.poetry.scripts]
f2f = "f2f.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
